# urielv1

./: Cargo.toml  LICENSE.md  README.md  URIEL SQL STUFF.txt  bench.csv  build.rs  faiss_c.lib  license.md  openblas.lib  semantic_memory.db  training_data.jsonl  uriel0.h
configs/: encoder-dev.toml  router-dev.toml
data/: oep_w.json  semantic_memory.db  semantic_memory.db-shm  semantic_memory.db-wal  uriel.meta.json
data/lex/: lex.jsonl
data/logs/: trace-1761324293-2d9fc49d.jsonl
data/meta/: meta_events.jsonl  meta_trace.jsonl  metacog_trace.jsonl
db/: semantic_embeddings.db  semantic_memory.db
include/: uriel.h
sample/: a.txt  b.txt  c.txt  d.txt  e.txt  f.txt  g.txt
sample/bench/: bench.csv
src/: URIEL_UI.rs  lib.rs  main.rs  smie_bench.rs  train_encoder.rs  uriel.ai_ui.rs
src/Callosum/: callosum.rs  event.rs  mod.rs
src/Frontal/: frontal.rs  frontal_adapter.rs  mod.rs
src/Hippocampus/: burn_model.rs  embedding.rs  error.rs  fact_parse.rs  faiss.rs  ffi.rs  hippocampus_adapter.rs  ids.rs  index.rs  infer.rs  kv_facts.rs  memory_bridge.rs  mod.rs  pipeline.rs  primordial.json  primordial.rs  redis_backend.rs  sqlite_backend.rs
src/Inference/: inference.rs
src/Learning/: dataset.rs  ingest.rs  loss.rs  mod.rs  model.rs  trainer.rs
src/Learning/routercopy/: dataset.rs  loss.rs  mod.rs  model.rs  trainer.rs
src/Microthalamus/: goal.rs  microthalamus.rs  mod.rs
src/PFC/: action_router.rs  context_retriever.rs  cortex.rs  cortex_adapter.rs  cortex_solver.rs  language_composer.rs  mod.rs  reasoning_selector.rs
src/Parietal/: mod.rs  parietal.rs
src/Temporal/: temporal.rs
src/Thalamus/: thalamus.rs
src/api/: runtime_api.rs
src/callosum/: callosum.rs  event.rs  metacog_subscriber.rs  mod.rs  payloads.rs
src/concepts_and_contexts/: answer.rs  concept.rs  extractors.rs  learner.rs  mod.rs  registry.rs  router.rs  speech_concepts.rs
src/core/: core.rs  handle.rs  mod.rs  reentry.rs
src/embedder/: embedder.rs
src/faiss/: faiss_c.lib
src/knowledge/: mod.rs  ops.rs  schema.rs  tms.rs  types.rs
src/lexicon/: mod.rs
src/memory/: ledger.rs  mod.rs  rag_ann.rs
src/meta/: callobs.rs  metacog_loop.rs  mod.rs  trace.rs  trace_v2.rs
src/parietal/: infer_route.rs  mod.rs  parietal.rs  parietal_adapter.rs  payloads.rs  route_cfg.rs
src/policy/: clarification.rs  features.rs  guardrail.rs  mod.rs  policy_infer.rs  retrieval.rs  router_infer.rs  types.rs
src/rag_agent/: composer.rs  frame.rs  mod.rs  pipeline.rs  retriever.rs  scoring.rs
src/riftnet/: mod.rs
src/soarus/: mod.rs
src/tokenizer/: mod.rs  tokenizer.rs  vocab.rs
src/tools/: mod.rs  web_ingest.rs
src/training/: config.rs  dataset.rs  manager.rs  mod.rs  model_router.rs  trainer.rs
tests/: callosum_test.rs  e2e_memory_test.rs  infer_route_test.rs  parietal_test.rs  tokenizer_test.rs
